better init/sbin scripts